<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration {
    public function up(): void {
        Schema::create('words', function (Blueprint $table) {
            $table->id();
            $table->string('text');
            $table->string('type');
            $table->text('definition')->nullable();
            $table->text('example')->nullable();
            $table->timestamps();
        });
    }

    public function down(): void {
        Schema::dropIfExists('words');
    }
};
